--- a/templates/index.html
+++ b/templates/index.html
@@ -81,10 +81,10 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4" >
-            <div class="card" style="width: 85%; height: 60%;">
+            <div class="card" style="width: 85%; height: 50%;">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="static/images/groove2.jpg" class="img-fluid" />
-                <a href="">
+                <a ref="https://groovehub-1d4997d3b5cb.herokuapp.com/"><img src="static/images/groove2.jpg" class="img-fluid" h></a>
+
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
               </div>
@@ -92,7 +92,7 @@
                 <h4 class="card-title">Groove Hub</h4>
                 <p class="card-text">
                   <p style="text-align: left;">Groove Hub is a chatroom where you can share music from YouTube, build collaborative playlists, and enjoy watching and listening with others in real-time. </p>
-                  <a href="" class="btn btn-primary" style="margin-right: 5%;">Code</a> <a href="" class="btn btn-primary">Website</a>
+                  <a href="https://github.com/blakebrandon-hub/Groove-Hub-Chat" class="btn btn-primary" style="margin-right: 5%;">Code</a> <a href="https://groovehub-1d4997d3b5cb.herokuapp.com/" class="btn btn-primary">Website</a>
                   <br>
                 
                 <br>
@@ -116,7 +116,7 @@
         </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card" style="max-width: 85%; height: 60%;">
+            <div class="card" style="max-width: 85%; height: 50%;">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <img src="static/images/heap.jpg" class="img-fluid" />
                 <a href="">
@@ -152,7 +152,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card" style="max-width: 85%; height: 60%;">
+            <div class="card" style="max-width: 85%; height: 50%;">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <img src="static/images/ecommerce.jpg" class="img-fluid" />
                 <a href="">
