--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <header >
   <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid" >
-      <a class="navbar-brand" href="#" style="font-size: 24px;">Blake Brandon Project Portfolio</a>
+      <a class="navbar-brand" href="#" style="font-size: 18px;">Blake Brandon Project Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -81,14 +81,14 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4" >
-            <div class="card" style="width: 85%; height: 50%;">
+            <div class="card" style="width: 100%; height: 50%;">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <a ref="https://groovehub-1d4997d3b5cb.herokuapp.com/"><img src="static/images/groove2.jpg" class="img-fluid" h></a>
 
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
               </div>
-              <div class="card-body">
+              <div class="card-body" style="text-align: center;">
                 <h4 class="card-title">Groove Hub</h4>
                 <p class="card-text">
                   <p style="text-align: left;">Groove Hub is a chatroom where you can share music from YouTube, build collaborative playlists, and enjoy watching and listening with others in real-time. </p>
@@ -116,7 +116,7 @@
         </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card" style="max-width: 85%; height: 50%;">
+            <div class="card" style="max-width: 100%; height: 50%;">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <img src="static/images/heap.jpg" class="img-fluid" />
                 <a href="">
@@ -152,7 +152,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card" style="max-width: 85%; height: 50%;">
+            <div class="card" style="max-width: 100%; height: 50%;">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <img src="static/images/ecommerce.jpg" class="img-fluid" />
                 <a href="">
