--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -33,11 +32,10 @@
 </header>
 
 <p>
-            <a aria-current="page" href="#" style="font-size: 20px; padding-left: 15px; color: black;">Resume</a>
-            <a href="#" style="font-size: 20px; padding-left: 15px; color: black;">LinkedIn</a>
-            
-            <a href="#" style="font-size: 20px;padding-left: 15px; color: black;">Email</a></p>
-
+    <a aria-current="page" href="#" style="font-size: 20px; padding-left: 15px; color: black;">Resume</a>
+    <a href="#" style="font-size: 20px; padding-left: 15px; color: black;">LinkedIn</a> 
+    <a href="#" style="font-size: 20px;padding-left: 15px; color: black;">Email</a>
+</p>
 
 <style>
 /* Media query for mobile devices */
@@ -69,20 +67,16 @@
 
 </style>
 
-
-
-
     <!-- Jumbotron
     <div id="intro" class="p-5 text-center bg-light">
       <h1 class="mb-3 h2></h1">Blake Brandon</h1>
       <br>
       <h1 class="mb-1 h3"></h1">Portfolio Projects</h1>
-      <p class="card-text"> -->
-        <!-- Some text can go here -->
-
+      <p class="card-text"> 
+         Some text can go here 
       </p>
     </div>
-    <!-- Jumbotron-->
+    Jumbotron-->
 
   <!--Main Navigation-->
 
@@ -197,12 +191,7 @@ This project integrates Stripe Checkout, offering a secure and efficient payment
 </li><br>
 
           </ul>
-          </div>
-
-
-
-
-
+        </div>
 
 
         </div>        
